# nQueens

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SConstruct  autorun.sh  autorun2.sh  cmake_install.cmake  cpp_ecs.code-workspace  ecs  nQueen  nQueenSolves.txt  nQueensTime.csv  time.txt
include/: Board.hpp  Dir.hpp  HashBoard.hpp  MathMore.hpp  ProgressBar.hpp  Queen.hpp  SearchResults.hpp  Solver_BFS.hpp  Solver_BFS_Fast.hpp  Solver_Base.hpp  Solver_HillDescent.hpp  Solver_Insert.hpp  Solver_SimAnnealing.hpp
src/: main.cpp
src/Misc/: MathMore.cpp  ProgressBar.cpp
src/board/: Board.cpp
src/queen/: Queen.cpp
src/search_results/: SearchResults.cpp
src/solvers/: Solver_BFS.cpp  Solver_BFS_Fast.cpp  Solver_Base.cpp  Solver_HillDescent.cpp  Solver_Insert.cpp  Solver_SimAnnealing.cpp
